# qq-copy

./: README.md  build-android.sh  install.sh  start-server.sh
.github/workflows/: build-apk.yml
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  chat_client.cpp  chat_client.hpp  native-lib.cpp  protocol_codec.cpp  protocol_codec.hpp
android/app/src/main/java/com/example/qqchat/: AboutActivity.java  ChatActivity.java  ChatService.java  ForgotPasswordActivity.java  FriendListActivity.java  LoginActivity.java  MirrorSelectionDialog.java  RegisterActivity.java  UpdateCheckDialog.java  UpdateDialogFragment.java  UpdateDownloadDialog.java  UpdateManager.java  UpdateMethodDialog.java
android/app/src/main/java/com/example/qqchat/adapter/: ChatMessageAdapter.java  FriendListAdapter.java
android/app/src/main/java/com/example/qqchat/model/: Friend.java  Message.java  User.java
android/app/src/main/res/drawable/: circle_bg.xml
android/app/src/main/res/layout/: activity_about.xml  activity_chat.xml  activity_forgot_password.xml  activity_friend_list.xml  activity_login.xml  activity_register.xml  dialog_download_progress.xml  dialog_mirror_selection.xml  dialog_update.xml  dialog_update_check.xml  dialog_update_method.xml  item_friend.xml  item_message_other.xml  item_message_self.xml  item_mirror.xml
android/app/src/main/res/menu/: menu_friend_list.xml
android/app/src/main/res/values/: colors.xml  styles.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
server/: CMakeLists.txt
server/config/: server.conf
server/include/qqchat/: cache_manager.hpp  chat_server.hpp  connection_manager.hpp  database_pool.hpp  message_handler.hpp  protocol_codec.hpp
server/src/: cache_manager.cpp  chat_server.cpp  connection_manager.cpp  database_pool.cpp  main.cpp  message_handler.cpp  protocol_codec.cpp
sql/: init.sql
